updated LEARN academy description

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/LEARNAcademy.png" alt="" /></a>
-											<p>Inaugural class of LEARN's )Ruby on Rails 12 week Bootcamp.<br>
+											<p>Inaugural class of LEARN's Ruby on Rails 12 week Fullstack Web Development Bootcamp.<br>
 												<span>Full stack web development bootcamp covering HTML/CSS, Javascript, Ruby programming language, Rails server framework and SQL based databases(e.g., PostgreSQL).</span>
 										</p>
 										</article>
