Added two more project to portfolio

--- a/index.html
+++ b/index.html
@@ -161,6 +161,31 @@
 												<li><a href="https://almost-karaoke.herokuapp.com/" class="button">Live Site</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/jm-omnifood.png" alt="" /></a>
+											<h3>JM-Omnifood</h3>
+											<p>A responsive webpage for a mythical food delivery service</p>
+											<ul>
+												<li>Webpage is built with HTML/CSS, Bootstrap and Javascript;</li>
+												<li>Well crafted professional looking frontend project</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/jetamartin/omnifood" class="button">GitHub</a></li>
+												<li><a href="https://jm-omnifood.herokuapp.com/" class="button">Live Site</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/SnacksOrBooze.png" alt="" /></a>
+											<h3>Snacks Or Booze</h3>
+											<p>A responsive webpage for a Silicon Valley's most famous dive bar</p>
+											<ul>
+												<li>App is built with React and Reactstrap/Bootstrap and Javascript;</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/jetamartin/react-snacks-or-booze" class="button">GitHub</a></li>
+												<li><a href="https://competent-keller-141d64.netlify.app" class="button">Live Site</a></li>
+											</ul>
+										</article>
 										<!-- <article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>abacadddd</h3>
