--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<!-- <ul class="icons"> -->
 										<!-- <li><a href="#" class="icon solid fa-file"></a></li> -->
 										<div class="headerIcons">
-											<a href="images/JM1Page.pdf" target="blank" class="icon solid fa-file"><span>Resume</span></a>
+											<a href="images/JM2PageResume12232021.pdf" target="blank" class="icon solid fa-file"><span>Resume</span></a>
 											<a href="http://www.github.com" target="blank" class="icon fa-github"><span>Github</span></a>
 											<a href="https://www.linkedin.com/in/jet-martin-b769a11/" target="blank" class="icon fa-linkedin"><span>LinkedIn</span></a>
 											<a href="mailto:jetamartin@gmail.com" target="blank" class="icon fa-envelope"><span>Email</span></a>
