changed a few screenshots

--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
 											<h3>Tennis Central</h3>
 											<p><span>A full stack single page app (SPA) that connects Tennis players with similar skill levels and availability for match play and practice</span></p>
 											<ul>
-												<li>Client (frontend) is built using REACT with Bootstrap for styling;</li>
-												<li>Server (backend) is built using Express/Node. with a PostgreSQL database;</li>
-												<li>Built RESTful API for client/server communications;</li>
+												<li>Client (frontend) is built using REACT with Bootstrap for styling</li>
+												<li>Server (backend) is built using Express/Node. with a PostgreSQL database</li>
+												<li>Built RESTful API for client/server communications</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/jetamartin/tennis-central" class="button">GitHub</a></li>
-												<li><a href="https://tennis-central.surge.sh/" class="button">Live Site</a></li>
+												<li><a href="https://github.com/jetamartin/tennis-central" target="_blank" class="button">GitHub</a></li>
+												<li><a href="https://tennis-central.surge.sh/" target="_blank" class="button">Live Site</a></li>
 											</ul>
 										</article>
 										<article>
@@ -152,13 +152,26 @@
 											<h3>Almost Karaoke</h3>
 											<p>A full stack website that displays marries YouTube Music videos alongside the video's lyrics</p>
 											<ul>
-												<li>Client (frontend) is built with HTML/CSS, Bootstrap and Javascript;</li>
-												<li>Server (backend) is built on Flask with Python with a PostgreSQL database;</li>
-												<li>Built RESTful API for client/server communications;</li>
+												<li>Client (frontend) is built with HTML/CSS, Bootstrap and Javascript</li>
+												<li>Server (backend) is built using Flask and Python with a PostgreSQL database</li>
+												<li>Built RESTful API for client/server communications</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/jetamartin/not-so-karaoke" class="button">GitHub</a></li>
-												<li><a href="https://almost-karaoke.herokuapp.com/" class="button">Live Site</a></li>
+												<li><a href="https://github.com/jetamartin/not-so-karaoke" target="_blank" class="button">GitHub</a></li>
+												<li><a href="https://almost-karaoke.herokuapp.com/" target="_blank" class="button">Live Site</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/accelerator-job-board-company-page.png" alt="" /></a>
+											<h3>Accelerator Job Board</h3>
+											<p>A full stack SPA that allows user to view companies that are hiring and specific job openings for each company.  </p>
+											<ul>
+												<li>Client (frontend) is built using React and Bootstrap for styling</li>
+												<li>Server (backend) is built using Nodejs</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/jetamartin/react-jobly-frontend" target="_blank" class="button">GitHub</a></li>
+												<li><a href="https://accelerator-job-board.surge.sh/" target="_blank"  class="button">Live Site</a></li>
 											</ul>
 										</article>
 										<article>
@@ -170,20 +183,23 @@
 												<li>Well crafted professional looking frontend project</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/jetamartin/omnifood" class="button">GitHub</a></li>
-												<li><a href="https://jm-omnifood.herokuapp.com/" class="button">Live Site</a></li>
+												<li><a href="https://github.com/jetamartin/omnifood" target="_blank" class="button">GitHub</a></li>
+												<li><a href="https://jm-omnifood.herokuapp.com/" target="_blank" class="button">Live Site</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/SnacksOrBooze.png" alt="" /></a>
-											<h3>Snacks Or Booze</h3>
-											<p>A responsive webpage for a Silicon Valley's most famous dive bar</p>
+											<a href="#" class="image"><img src="images/urban-brews-home-page.png" alt="" /></a>
+											<h3>Urban Brews</h3>
+											<p>A responsive Single Page App for a Silicon Valley's premier dive bar Urban Brews</p>
 											<ul>
-												<li>App is built with React and Reactstrap/Bootstrap and Javascript;</li>
+												<li>App is built with React and Reactstrap/Bootstrap and Javascript.</li>
+												<li>The backend is a simple json-server</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/jetamartin/react-snacks-or-booze" class="button">GitHub</a></li>
-												<li><a href="https://competent-keller-141d64.netlify.app" class="button">Live Site</a></li>
+												<li><a href="https://github.com/jetamartin/react-snacks-or-booze" target="_blank" class="button">GitHub</a></li>
+												<li><a href="https://urban-brews.herokuapp.com/" target="_blank" class="button">Live Site</a></li>
+												<!-- <li><a href="https://competent-keller-141d64.netlify.app" target="_blank" class="button">Live Site</a></li> -->
+
 											</ul>
 										</article>
 										<!-- <article>
